Updated css for nodes and pages

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -2,3 +2,49 @@
 // Layout
 // Styles for main layout
 // --------------------------------------------------
+$gridGutterWidth: 20px;
+
+body {
+  background-color: $body-background-color;
+  #header {
+    #navigation {
+      margin-top: 0;
+      margin-left: 0 - $gridGutterWidth;
+      margin-right: 0 - $gridGutterWidth;
+      .navbar-inner {
+        background: $navbar-background-color;
+        border-color: lighten($navbar-background-color, 20);
+        margin-top: -1px;
+        @include border-radius(0 0 4px 4px);
+        color: $navbar-color;
+        a.brand {
+          color: $brand-color;
+          text-shadow: 0 1px 0 darken($brand-color, 80);
+        }
+      }
+    }
+  }
+  #main-wrapper {
+    > .container {
+      background-color: $main-background-color;
+      padding-top: $gridGutterWidth;
+      padding-bottom: $gridGutterWidth;
+      padding-left: $gridGutterWidth;
+      padding-right: $gridGutterWidth;
+      @include box-shadow(0 1px 4px rgba(0, 0, 0, 0.065));
+      @include border-radius(4px 4px 0 0);
+    }
+  }
+  #footer {
+    margin-top: 20px;
+    > .container {
+      min-height: 150px;
+      background-color: $footer-background-color;
+      padding-top: $gridGutterWidth;
+      padding-bottom: $gridGutterWidth;
+      padding-left: $gridGutterWidth;
+      padding-right: $gridGutterWidth;
+      @include box-shadow(0 1px 4px rgba(0, 0, 0, 0.065));
+    }
+  }
+}
