--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -1,3 +1,4 @@
 // Mixin
 // SASS Mixins
 // --------------------------------------------------
+@import "../../../radix/assets/sass/bootstrap/mixins";
