--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,6 +2,10 @@
 // SASS partials import
 // --------------------------------------------------
 
+// Reponsive
+// --------------------------------------------------
+@import "responsive";
+
 // Theme CSS
 // --------------------------------------------------
 @import "mixin";
