--- a/assets/sass/_color.scss
+++ b/assets/sass/_color.scss
@@ -1,3 +1,29 @@
 //
 // Color
 // --------------------------------------------------
+
+// General
+$body-background-color: #F0ECE3;
+$main-background-color: #FFFFFF;
+$footer-background-color: #4F4E57;
+
+// Text
+$text-color: #4F4E57;
+$link-color: #8CB252;
+$link-hover-color: darken($link-color, 20);
+
+// Navbar
+$navbar-background-color: #8CB252;
+$navbar-color: #FFFFFF;
+$brand-color: #FFFFFF;
+
+body {
+  color: $text-color;
+  a {
+    color: $link-color;
+    &:hover {
+      color: $link-hover-color;
+      text-decoration: none;
+    }
+  }
+}
