--- a/assets/sass/_node.scss
+++ b/assets/sass/_node.scss
@@ -1,3 +1,106 @@
 // Node
 // Styles for Nodes
 // --------------------------------------------------
+
+// General
+// --------------------------------------------------
+.node {
+  .field-name-title {
+    font-weight: 400;
+    p {
+      margin-bottom: 5px;
+    }
+  }
+}
+
+// Menu
+// --------------------------------------------------
+.node-menu {
+  .field-name-field-menu-types {
+    .field-item {
+      margin-bottom: 5px;
+      .field-name-field-menu-type {
+        float: left;
+      }
+      .field-name-field-menu-price {
+        float: right;
+        font-weight: bold;
+      }
+    }
+  }
+
+  // Teaser
+  &.view-mode-teaser {
+
+  }
+
+  // Featured
+  &.view-mode-featured {
+  }
+
+  // Full
+  &.view-mode-full {
+
+  }
+}
+
+// Blog Post
+// --------------------------------------------------
+.node-blog-post {
+  .field {
+    margin-bottom: 10px;
+  }
+  .field-name-submitted-by {
+    font-weight: 400;
+  }
+  .field-name-field-blog-post-categories {
+    float: left;
+    .field-items {
+      @include clearfix();
+      .field-item {
+        display: inline;
+        margin: 0 10px 0 0;
+      }
+    }
+  }
+  .field-name-field-blog-post-tags {
+    float: right;
+    .field-items {
+      @include clearfix();
+      .field-item {
+        display: inline;
+        margin: 0 10px 0 0;
+      }
+    }
+  }
+  ul.links {
+    clear: left;
+    display: block;
+  }
+  &.view-mode-teaser {
+    margin: 0 0 20px !important;
+    padding: 0 0 20px !important;
+    border-bottom: 1px solid #EEEEEE;
+  }
+}
+
+// Event
+// --------------------------------------------------
+.node-event {
+  .field {
+    margin-bottom: 10px;
+  }
+  &.view-mode-full {
+    .field-name-field-event-images {
+      .field-items {
+        margin-left: -10px;
+        @include clearfix();
+        .field-item {
+          float: left;
+          margin: 0 0 10px 10px;
+          width: 22%;
+        }
+      }
+    }
+  }
+}
