--- a/assets/sass/_page.scss
+++ b/assets/sass/_page.scss
@@ -1,3 +1,6 @@
 // Page
 // Styles for individual pages
 // --------------------------------------------------
+
+// Home
+// --------------------------------------------------
