--- a/assets/sass/_structure.scss
+++ b/assets/sass/_structure.scss
@@ -2,3 +2,29 @@
 // Structure
 // Styles for Tabs, Messages, ..etc
 // --------------------------------------------------
+
+// Page Header
+// --------------------------------------------------
+.page-header {
+  margin-top: 0;
+  h1 {
+    margin-top: 0;
+  }
+}
+
+// Slideshow
+// --------------------------------------------------
+.pane-bundle-slideshow {
+  margin-bottom: 20px;
+}
+
+// Tabs
+// --------------------------------------------------
+ul {
+  &.tabs.secondary > .active > a, &.action-links > .active > a  {
+    background-color: $link-color;
+    &:hover {
+      background-color: $link-color;
+    }
+  }
+}
