--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -15,3 +15,7 @@
 @import "view";
 @import "form";
 @import "node";
+
+// Other
+// --------------------------------------------------
+@import "maintenance";
