--- a/assets/sass/_color.scss
+++ b/assets/sass/_color.scss
@@ -11,6 +11,7 @@ $footer-background-color: #4F4E57;
 $text-color: #4F4E57;
 $link-color: #8CB252;
 $link-hover-color: darken($link-color, 20);
+$footer-color: #FFFFFF;
 
 // Navbar
 $navbar-background-color: #8CB252;
