--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -12,13 +12,13 @@
   .clearfix:after {
     clear: both; }
 
-/* line 20, ../sass/_color.scss */
+/* line 21, ../sass/_color.scss */
 body {
   color: #4f4e57; }
-  /* line 22, ../sass/_color.scss */
+  /* line 23, ../sass/_color.scss */
   body a {
     color: #8cb252; }
-    /* line 24, ../sass/_color.scss */
+    /* line 25, ../sass/_color.scss */
     body a:hover {
       color: #556d31;
       text-decoration: none; }
@@ -70,10 +70,10 @@ body {
     border-radius: 4px 4px 0 0; }
   /* line 38, ../sass/_layout.scss */
   body #footer {
-    margin-top: 20px; }
-    /* line 40, ../sass/_layout.scss */
+    color: white;
+    margin-bottom: 20px; }
+    /* line 41, ../sass/_layout.scss */
     body #footer > .container {
-      min-height: 150px;
       background-color: #4f4e57;
       padding-top: 20px;
       padding-bottom: 20px;
@@ -81,7 +81,10 @@ body {
       padding-right: 20px;
       -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
       -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065); }
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+      -webkit-border-radius: 0 0 4px 4px;
+      -moz-border-radius: 0 0 4px 4px;
+      border-radius: 0 0 4px 4px; }
 
 /* line 8, ../sass/_structure.scss */
 .page-header {
@@ -144,6 +147,17 @@ ul.tabs.secondary > .active > a, ul.action-links > .active > a {
 /* line 14, ../sass/_panel.scss */
 .panel-display .content .panel-pane {
   margin-bottom: 20px; }
+
+/* line 8, ../sass/_form.scss */
+.btn-big {
+  font-size: 20px;
+  padding: 10px 25px; }
+
+/* line 13, ../sass/_form.scss */
+.form-actions-clean {
+  border: none;
+  padding: 0;
+  background: none; }
 
 /* line 8, ../sass/_node.scss */
 .node .field-name-title {
@@ -235,3 +249,67 @@ ul.tabs.secondary > .active > a, ul.action-links > .active > a {
     float: left;
     margin: 0 0 10px 10px;
     width: 22%; }
+
+/* line 6, ../sass/_maintenance.scss */
+.maintenance-page #main-wrapper #main {
+  padding-bottom: 30px; }
+  /* line 8, ../sass/_maintenance.scss */
+  .maintenance-page #main-wrapper #main .sidebar {
+    margin-bottom: 20px; }
+    /* line 10, ../sass/_maintenance.scss */
+    .maintenance-page #main-wrapper #main .sidebar ol.task-list {
+      margin: 0;
+      padding: 0; }
+      /* line 13, ../sass/_maintenance.scss */
+      .maintenance-page #main-wrapper #main .sidebar ol.task-list li {
+        font-size: 1.1em;
+        line-height: 1.3em;
+        margin: 0 0 10px; }
+        /* line 17, ../sass/_maintenance.scss */
+        .maintenance-page #main-wrapper #main .sidebar ol.task-list li i {
+          font-size: 1.5em;
+          margin: 3px 10px 0 0; }
+        /* line 21, ../sass/_maintenance.scss */
+        .maintenance-page #main-wrapper #main .sidebar ol.task-list li.done {
+          color: #999999; }
+        /* line 24, ../sass/_maintenance.scss */
+        .maintenance-page #main-wrapper #main .sidebar ol.task-list li.active {
+          font-weight: 800; }
+  /* line 31, ../sass/_maintenance.scss */
+  .maintenance-page #main-wrapper #main .content form {
+    border: 1px solid #e5e5e5;
+    padding: 20px 20px 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px; }
+    /* line 35, ../sass/_maintenance.scss */
+    .maintenance-page #main-wrapper #main .content form .form-actions {
+      margin: 20px -20px 0;
+      -webkit-border-radius: 0 0 4px 4px;
+      -moz-border-radius: 0 0 4px 4px;
+      border-radius: 0 0 4px 4px; }
+/* line 43, ../sass/_maintenance.scss */
+.maintenance-page .system-status-report {
+  border-collapse: separate;
+  border-left: 0; }
+  /* line 47, ../sass/_maintenance.scss */
+  .maintenance-page .system-status-report tr td {
+    padding: 10px 8px;
+    border-top: none; }
+    /* line 50, ../sass/_maintenance.scss */
+    .maintenance-page .system-status-report tr td.status-description {
+      padding-left: 40px;
+      font-size: 0.9em; }
+
+@media (max-width: 767px) {
+  /* line 61, ../sass/_maintenance.scss */
+  .maintenance-page .page-header {
+    margin-bottom: 10px; }
+    /* line 63, ../sass/_maintenance.scss */
+    .maintenance-page .page-header h1 {
+      float: none;
+      text-align: center; }
+  /* line 68, ../sass/_maintenance.scss */
+  .maintenance-page .steps {
+    text-align: center;
+    margin-bottom: 15px; } }
