--- a/assets/sass/_node.scss
+++ b/assets/sass/_node.scss
@@ -11,6 +11,9 @@
       margin-bottom: 5px;
     }
   }
+  .pane-entity-field {
+    margin-bottom: 10px !important;
+  }
 }
 
 // Menu
@@ -47,13 +50,12 @@
 // Blog Post
 // --------------------------------------------------
 .node-blog-post {
-  .field {
-    margin-bottom: 10px;
-  }
-  .field-name-submitted-by {
+  .field-name-submitted-by,
+  .pane-node-field-name-submitted-by {
     font-weight: 400;
   }
-  .field-name-field-blog-post-categories {
+  .field-name-field-blog-post-categories,
+  .pane-node-field-blog-post-categories {
     float: left;
     .field-items {
       @include clearfix();
@@ -63,7 +65,8 @@
       }
     }
   }
-  .field-name-field-blog-post-tags {
+  .field-name-field-blog-post-tags,
+  .pane-node-field-blog-post-tags {
     float: right;
     .field-items {
       @include clearfix();
@@ -77,10 +80,24 @@
     clear: left;
     display: block;
   }
-  &.view-mode-teaser {
-    margin: 0 0 20px !important;
+
+  &.node-teaser {
+    margin: 0 0 30px !important;
     padding: 0 0 20px !important;
     border-bottom: 1px solid #EEEEEE;
+  }
+
+  &.node-featured {
+    margin-bottom: 10px;
+    .pane-node-title {
+      margin-bottom: 0;
+      .pane-content {
+        margin-bottom: 5px;
+        a {
+          font-size: 1.2em;
+        }
+      }
+    }
   }
 }
 
