styles for blog-node panel

--- a/assets/sass/_node.scss
+++ b/assets/sass/_node.scss
@@ -49,7 +49,8 @@
 
 // Blog Post
 // --------------------------------------------------
-.node-blog-post {
+.node-blog-post,
+#blog-node {
   .field-name-submitted-by,
   .pane-node-field-name-submitted-by {
     font-weight: 400;
@@ -81,12 +82,14 @@
     display: block;
   }
 
+  // teaser
   &.node-teaser {
     margin: 0 0 30px !important;
     padding: 0 0 20px !important;
     border-bottom: 1px solid #EEEEEE;
   }
 
+  // featured
   &.node-featured {
     margin-bottom: 10px;
     .pane-node-title {
