CSS for blog taxonomy pages

--- a/assets/sass/_node.scss
+++ b/assets/sass/_node.scss
@@ -92,6 +92,9 @@
   // featured
   &.node-featured {
     margin-bottom: 10px;
+    .sidebar {
+      float: left;
+    }
     .pane-node-title {
       margin-bottom: 0;
       .pane-content {
