Update theme colors and maintenance page

--- a/assets/sass/_color.scss
+++ b/assets/sass/_color.scss
@@ -3,18 +3,18 @@
 // --------------------------------------------------
 
 // General
-$body-background-color: #F0ECE3;
+$body-background-color: #F7F7F7;
 $main-background-color: #FFFFFF;
 $footer-background-color: #4F4E57;
 
 // Text
 $text-color: #4F4E57;
-$link-color: #8CB252;
+$link-color: #168DD9;
 $link-hover-color: darken($link-color, 20);
 $footer-color: #FFFFFF;
 
 // Navbar
-$navbar-background-color: #8CB252;
+$navbar-background-color: #168DD9;
 $navbar-color: #FFFFFF;
 $brand-color: #FFFFFF;
 
