--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -17,10 +17,10 @@ body {
   color: #4f4e57; }
   /* line 23, ../sass/_color.scss */
   body a {
-    color: #8cb252; }
+    color: #168dd9; }
     /* line 25, ../sass/_color.scss */
     body a:hover {
-      color: #556d31;
+      color: #0d517c;
       text-decoration: none; }
 
 /* line 7, ../sass/_font.scss */
@@ -36,7 +36,7 @@ body {
 
 /* line 7, ../sass/_layout.scss */
 body {
-  background-color: #f0ece3; }
+  background-color: #f7f7f7; }
   /* line 10, ../sass/_layout.scss */
   body #header #navigation {
     margin-top: 0;
@@ -44,8 +44,8 @@ body {
     margin-right: -20px; }
     /* line 14, ../sass/_layout.scss */
     body #header #navigation .navbar-inner {
-      background: #8cb252;
-      border-color: #bbd199;
+      background: #168dd9;
+      border-color: #66baef;
       margin-top: -1px;
       -webkit-border-radius: 0 0 4px 4px;
       -moz-border-radius: 0 0 4px 4px;
@@ -99,10 +99,10 @@ body {
 
 /* line 24, ../sass/_structure.scss */
 ul.tabs.secondary > .active > a, ul.action-links > .active > a {
-  background-color: #8cb252; }
+  background-color: #168dd9; }
   /* line 26, ../sass/_structure.scss */
   ul.tabs.secondary > .active > a:hover, ul.action-links > .active > a:hover {
-    background-color: #8cb252; }
+    background-color: #168dd9; }
 
 /* line 10, ../sass/_menu.scss */
 #main-menu > ul.menu li > a {
@@ -110,62 +110,62 @@ ul.tabs.secondary > .active > a, ul.action-links > .active > a {
   text-shadow: 0 1px 0 #333333; }
   /* line 13, ../sass/_menu.scss */
   #main-menu > ul.menu li > a.active {
-    background: #719140;
+    background: #116fab;
     color: white; }
   /* line 17, ../sass/_menu.scss */
   #main-menu > ul.menu li > a:hover {
-    background: #719140;
+    background: #116fab;
     color: white; }
 /* line 23, ../sass/_menu.scss */
 #main-menu > ul.menu li.open > a {
-  background: #719140;
+  background: #116fab;
   color: white; }
 /* line 30, ../sass/_menu.scss */
 #main-menu > ul.menu li > ul.menu li a {
   text-shadow: none; }
   /* line 32, ../sass/_menu.scss */
   #main-menu > ul.menu li > ul.menu li a.active {
-    background-color: #eaf1df; }
+    background-color: #c2e4f9; }
   /* line 35, ../sass/_menu.scss */
   #main-menu > ul.menu li > ul.menu li a:hover {
-    background: #719140; }
+    background: #116fab; }
 
 /* line 48, ../sass/_menu.scss */
 .navbar .btn-navbar {
-  border-color: #3a4a21;
-  background-color: #65823a;
-  background-image: -moz-linear-gradient(top, #719140, #556d31);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#719140), to(#556d31));
-  background-image: -webkit-linear-gradient(top, #719140, #556d31);
-  background-image: -o-linear-gradient(top, #719140, #556d31);
-  background-image: linear-gradient(to bottom, #719140, #556d31);
+  border-color: #08334e;
+  background-color: #0f6398;
+  background-image: -moz-linear-gradient(top, #116fab, #0d517c);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#116fab), to(#0d517c));
+  background-image: -webkit-linear-gradient(top, #116fab, #0d517c);
+  background-image: -o-linear-gradient(top, #116fab, #0d517c);
+  background-image: linear-gradient(to bottom, #116fab, #0d517c);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF719140', endColorstr='#FF556D31', GradientType=0); }
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF116FAB', endColorstr='#FF0D517C', GradientType=0); }
   /* line 51, ../sass/_menu.scss */
   .navbar .btn-navbar:hover {
     -webkit-transition: none;
     -moz-transition: none;
     -o-transition: none;
     transition: none;
-    background-color: #607b37;
-    background-image: -moz-linear-gradient(top, #556d31, #719140);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#556d31), to(#719140));
-    background-image: -webkit-linear-gradient(top, #556d31, #719140);
-    background-image: -o-linear-gradient(top, #556d31, #719140);
-    background-image: linear-gradient(to bottom, #556d31, #719140);
+    background-color: #0e5d8e;
+    background-image: -moz-linear-gradient(top, #0d517c, #116fab);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0d517c), to(#116fab));
+    background-image: -webkit-linear-gradient(top, #0d517c, #116fab);
+    background-image: -o-linear-gradient(top, #0d517c, #116fab);
+    background-image: linear-gradient(to bottom, #0d517c, #116fab);
     background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF556D31', endColorstr='#FF719140', GradientType=0); }
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF0D517C', endColorstr='#FF116FAB', GradientType=0); }
 
 /* line 65, ../sass/_menu.scss */
 .pane-menu-tree .pane-content ul.menu li a:hover {
-  background-color: #eaf1df; }
+  background-color: #c2e4f9; }
 /* line 70, ../sass/_menu.scss */
 .pane-menu-tree .pane-content ul.menu li.active-trail > a {
-  background-color: #8cb252; }
+  background-color: #168dd9; }
 /* line 75, ../sass/_menu.scss */
 .pane-menu-tree .pane-content ul.menu li.active-trail > ul.menu.active-trail > a {
-  background-color: #eaf1df;
-  color: #8cb252; }
+  background-color: #c2e4f9;
+  color: #168dd9; }
 
 /* line 9, ../sass/_panel.scss */
 .panel-display .sidebar .panel-pane {
