fix php notice when steps and/or copyright is not set

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -37,6 +37,7 @@ body {
   }
   #footer {
     color: $footer-color;
+    border-top: 1px solid #F7F7F7;
     margin-bottom: 20px;
     > .container {
       background-color: $footer-background-color;
