--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -70,11 +70,12 @@ body {
     border-radius: 4px 4px 0 0; }
   /* line 38, ../sass/_layout.scss */
   body #footer {
-    color: white;
+    color: #4f4e57;
+    border-top: 1px solid #F7F7F7;
     margin-bottom: 20px; }
-    /* line 41, ../sass/_layout.scss */
+    /* line 42, ../sass/_layout.scss */
     body #footer > .container {
-      background-color: #4f4e57;
+      background-color: white;
       padding-top: 20px;
       padding-bottom: 20px;
       padding-left: 20px;
