--- a/assets/sass/_color.scss
+++ b/assets/sass/_color.scss
@@ -5,13 +5,13 @@
 // General
 $body-background-color: #F7F7F7;
 $main-background-color: #FFFFFF;
-$footer-background-color: #4F4E57;
+$footer-background-color: #FFFFFF;
 
 // Text
 $text-color: #4F4E57;
 $link-color: #168DD9;
 $link-hover-color: darken($link-color, 20);
-$footer-color: #FFFFFF;
+$footer-color: #4F4E57;
 
 // Navbar
 $navbar-background-color: #168DD9;
