--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -371,28 +371,78 @@ ul.tabs.secondary > .active > a, ul.action-links > .active > a {
       -webkit-border-radius: 0 0 4px 4px;
       -moz-border-radius: 0 0 4px 4px;
       border-radius: 0 0 4px 4px; }
-/* line 43, ../sass/_maintenance.scss */
+      /* line 38, ../sass/_maintenance.scss */
+      .maintenance-page #main-wrapper #main .content form .form-actions .form-submit {
+        font-size: 20px;
+        padding: 10px 25px; }
+/* line 47, ../sass/_maintenance.scss */
 .maintenance-page .system-status-report {
   border-collapse: separate;
   border-left: 0; }
-  /* line 47, ../sass/_maintenance.scss */
+  /* line 51, ../sass/_maintenance.scss */
   .maintenance-page .system-status-report tr td {
     padding: 10px 8px;
     border-top: none; }
-    /* line 50, ../sass/_maintenance.scss */
+    /* line 54, ../sass/_maintenance.scss */
     .maintenance-page .system-status-report tr td.status-description {
       padding-left: 40px;
       font-size: 0.9em; }
+/* line 61, ../sass/_maintenance.scss */
+.maintenance-page .btn {
+  display: inline-block;
+  background: #0071ea;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0099f1), color-stop(100%, #004be2));
+  background: -moz-linear-gradient(center top, #0099f1 0%, #004be2 100%);
+  -webkit-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -moz-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  text-shadow: 0px -1px 0px black;
+  padding: 10px 10px;
+  border-color: #126eaf;
+  border-width: 1px;
+  border-style: solid;
+  text-align: center;
+  font-size: 12px;
+  line-height: 22px;
+  color: #ffffff; }
+/* line 82, ../sass/_maintenance.scss */
+.maintenance-page .btn:hover {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #35b6f7), color-stop(100%, #004be2));
+  background: -moz-linear-gradient(center top, #35b6f7 0%, #004be2 100%);
+  -webkit-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -moz-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -webkit-transition: background-color .8s ease-in-out;
+  -moz-transition: background-color .8s ease-in-out;
+  -o-transition: background-color .8s ease-in-out;
+  transition: background-color .8s ease-in-out;
+  line-height: -1px; }
+/* line 94, ../sass/_maintenance.scss */
+.maintenance-page .btn:active {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #004be2), color-stop(100%, #0099f1));
+  background: -moz-linear-gradient(center top, #004be2 0%, #0099f1 100%);
+  -webkit-box-shadow: 0px 0px 8px #474747 inset;
+  -moz-box-shadow: 0px 0px 8px #474747 inset;
+  box-shadow: 0px 0px 8px #474747 inset;
+  text-shadow: 0px -1px 0px #093fab;
+  line-height: -1px; }
 
 @media (max-width: 767px) {
-  /* line 61, ../sass/_maintenance.scss */
+  /* line 107, ../sass/_maintenance.scss */
   .maintenance-page .page-header {
     margin-bottom: 10px; }
-    /* line 63, ../sass/_maintenance.scss */
+    /* line 109, ../sass/_maintenance.scss */
     .maintenance-page .page-header h1 {
       float: none;
       text-align: center; }
-  /* line 68, ../sass/_maintenance.scss */
+  /* line 114, ../sass/_maintenance.scss */
   .maintenance-page .steps {
     text-align: center;
-    margin-bottom: 15px; } }
+    margin-bottom: 15px; }
+  /* line 120, ../sass/_maintenance.scss */
+  .maintenance-page form h3,
+  .maintenance-page form p.lead {
+    text-align: center; } }
