Add fontawesome to theme

--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -33,7 +33,7 @@ $purple:                #7a43b6 !default;
 // -------------------------
 $bodyBackground:        #F7F7F7 !default;
 $mainBackground:        #fff !default;
-$footerBackground:      #fff !default;
+$footerBackground:      #333 !default;
 $textColor:             $grayDark !default;
 
 
