--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -55,6 +55,7 @@
         text-align: center;
         a {
           text-decoration: none;
+          color: $white;
           i {
             display: block;
             font-size: 3.0em;
@@ -65,7 +66,7 @@
             width: auto;
           }
           &:hover {
-            color: $linkColorHover;
+            color: #BBBBBB;
           }
         }
       }
