Add maintenance partial back to theme

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -21,7 +21,7 @@ body {
     }
   }
   #footer {
-    color: $textColor;
+    color: lighten($textColor, 50);
     margin-bottom: 20px;
     > .container {
       background-color: $footerBackground;
