--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -27,3 +27,7 @@
 @import "comment";
 @import "node";
 @import "user";
+
+// Other
+// --------------------------------------------------
+@import "maintenance";
