--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Arbutus+Slab);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700);
 /* line 17, ../../../../../../../../../../usr/local/.rvm/gems/ruby-1.9.3-p194/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -14291,6 +14293,17 @@ form .format-toggle {
     padding: 0;
     border: none; }
 
+/* line 7, ../sass/_font.scss */
+body {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300; }
+  /* line 10, ../sass/_font.scss */
+  body h1, body h2, body h3, body h4, body h5, body h6 {
+    font-family: "Arbutus Slab", serif; }
+  /* line 13, ../sass/_font.scss */
+  body h2 {
+    line-height: 35px; }
+
 /* line 6, ../sass/_layout.scss */
 body #header #navigation {
   margin-top: 0;
@@ -14311,7 +14324,7 @@ body #main-wrapper > .container {
   border-radius: 4px 4px 0 0; }
 /* line 23, ../sass/_layout.scss */
 body #footer {
-  color: #333333;
+  color: #b3b3b3;
   margin-bottom: 20px; }
   /* line 26, ../sass/_layout.scss */
   body #footer > .container {
@@ -14538,3 +14551,117 @@ body #footer {
       /* line 122, ../sass/_node.scss */
       .node-event.node-featured .pane-node-title .pane-content a {
         font-size: 1.2em; }
+
+/* line 6, ../sass/_maintenance.scss */
+.maintenance-page #main-wrapper #main {
+  padding-bottom: 30px; }
+  /* line 8, ../sass/_maintenance.scss */
+  .maintenance-page #main-wrapper #main .sidebar {
+    margin-bottom: 20px; }
+    /* line 10, ../sass/_maintenance.scss */
+    .maintenance-page #main-wrapper #main .sidebar ol.task-list {
+      margin: 0;
+      padding: 0; }
+      /* line 13, ../sass/_maintenance.scss */
+      .maintenance-page #main-wrapper #main .sidebar ol.task-list li {
+        font-size: 1.1em;
+        line-height: 1.3em;
+        margin: 0 0 10px; }
+        /* line 17, ../sass/_maintenance.scss */
+        .maintenance-page #main-wrapper #main .sidebar ol.task-list li i {
+          font-size: 1.5em;
+          margin: 3px 10px 0 0; }
+        /* line 21, ../sass/_maintenance.scss */
+        .maintenance-page #main-wrapper #main .sidebar ol.task-list li.done {
+          color: #999999; }
+        /* line 24, ../sass/_maintenance.scss */
+        .maintenance-page #main-wrapper #main .sidebar ol.task-list li.active {
+          font-weight: 800; }
+  /* line 31, ../sass/_maintenance.scss */
+  .maintenance-page #main-wrapper #main .content form {
+    border: 1px solid #e5e5e5;
+    padding: 20px 20px 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px; }
+    /* line 35, ../sass/_maintenance.scss */
+    .maintenance-page #main-wrapper #main .content form .form-actions {
+      margin: 20px -20px 0;
+      -webkit-border-radius: 0 0 4px 4px;
+      -moz-border-radius: 0 0 4px 4px;
+      border-radius: 0 0 4px 4px; }
+      /* line 38, ../sass/_maintenance.scss */
+      .maintenance-page #main-wrapper #main .content form .form-actions .form-submit {
+        font-size: 20px;
+        padding: 10px 25px; }
+/* line 47, ../sass/_maintenance.scss */
+.maintenance-page .system-status-report {
+  border-collapse: separate;
+  border-left: 0; }
+  /* line 51, ../sass/_maintenance.scss */
+  .maintenance-page .system-status-report tr td {
+    padding: 10px 8px;
+    border-top: none; }
+    /* line 54, ../sass/_maintenance.scss */
+    .maintenance-page .system-status-report tr td.status-description {
+      padding-left: 40px;
+      font-size: 0.9em; }
+/* line 61, ../sass/_maintenance.scss */
+.maintenance-page .btn {
+  display: inline-block;
+  background: #0071ea;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0099f1), color-stop(100%, #004be2));
+  background: -moz-linear-gradient(center top, #0099f1 0%, #004be2 100%);
+  -webkit-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -moz-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  text-shadow: 0px -1px 0px black;
+  padding: 10px 10px;
+  border-color: #126eaf;
+  border-width: 1px;
+  border-style: solid;
+  text-align: center;
+  font-size: 12px;
+  line-height: 22px;
+  color: #ffffff; }
+/* line 82, ../sass/_maintenance.scss */
+.maintenance-page .btn:hover {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #35b6f7), color-stop(100%, #004be2));
+  background: -moz-linear-gradient(center top, #35b6f7 0%, #004be2 100%);
+  -webkit-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -moz-box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  box-shadow: 0px 1px 0px 0px #1fa9f4 inset;
+  -webkit-transition: background-color 0.8s ease-in-out;
+  -moz-transition: background-color 0.8s ease-in-out;
+  -o-transition: background-color 0.8s ease-in-out;
+  transition: background-color 0.8s ease-in-out;
+  line-height: -1px; }
+/* line 94, ../sass/_maintenance.scss */
+.maintenance-page .btn:active {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #004be2), color-stop(100%, #0099f1));
+  background: -moz-linear-gradient(center top, #004be2 0%, #0099f1 100%);
+  -webkit-box-shadow: 0px 0px 8px #474747 inset;
+  -moz-box-shadow: 0px 0px 8px #474747 inset;
+  box-shadow: 0px 0px 8px #474747 inset;
+  text-shadow: 0px -1px 0px #093fab;
+  line-height: -1px; }
+
+@media (max-width: 767px) {
+  /* line 107, ../sass/_maintenance.scss */
+  .maintenance-page .page-header {
+    margin-bottom: 10px; }
+    /* line 109, ../sass/_maintenance.scss */
+    .maintenance-page .page-header h1 {
+      float: none;
+      text-align: center; }
+  /* line 114, ../sass/_maintenance.scss */
+  .maintenance-page .steps {
+    text-align: center;
+    margin-bottom: 15px; }
+  /* line 120, ../sass/_maintenance.scss */
+  .maintenance-page form h3,
+  .maintenance-page form p.lead {
+    text-align: center; } }
