Remove gutter margin from navigation for tablet viewport

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -36,15 +36,8 @@ body {
   }
 }
 
-@media (min-width: 768px) and (max-width: 979px) { 
-  body {
-    #header {
-      #navigation {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-  }
+@media (min-width: 768px) and (max-width: 979px) {
+  // Tablet
 }
 
 @media (max-width: 767px) {
