Update navbar styles

--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -2,3 +2,9 @@
 // Layout
 // Styles for Forms
 // --------------------------------------------------
+
+.navbar {
+  .search-form {
+    padding: 10px 0;
+  }
+}
