--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -14499,12 +14499,16 @@ body {
   body ul li {
     list-style: disc; }
 
-/* line 6, ../sass/_layout.scss */
-body #header #navigation {
-  margin-top: 0;
-  margin-left: -20px;
-  margin-right: -20px; }
-/* line 13, ../sass/_layout.scss */
+/* line 5, ../sass/_layout.scss */
+body #header {
+  margin-top: 20px; }
+  /* line 7, ../sass/_layout.scss */
+  body #header #navigation {
+    margin-top: 0;
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-bottom: 0px; }
+/* line 15, ../sass/_layout.scss */
 body #main-wrapper > .container {
   background-color: white;
   padding-top: 20px;
@@ -14513,16 +14517,13 @@ body #main-wrapper > .container {
   padding-right: 20px;
   -webkit-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.065);
   -moz-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.065);
-  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.065);
-  -webkit-border-radius: 4px 4px 0 0;
-  -moz-border-radius: 4px 4px 0 0;
-  border-radius: 4px 4px 0 0; }
-/* line 23, ../sass/_layout.scss */
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.065); }
+/* line 24, ../sass/_layout.scss */
 body #footer {
   color: #b3b3b3;
   margin-bottom: 20px;
   margin-top: 0; }
-  /* line 27, ../sass/_layout.scss */
+  /* line 28, ../sass/_layout.scss */
   body #footer > .container {
     background-color: #333333;
     border-top: 1px solid #f7f7f7;
@@ -14538,7 +14539,7 @@ body #footer {
     border-radius: 0 0 4px 4px; }
 
 @media (max-width: 767px) {
-  /* line 47, ../sass/_layout.scss */
+  /* line 48, ../sass/_layout.scss */
   body #header #navigation {
     margin-left: auto;
     margin-right: auto; } }
@@ -14580,21 +14581,29 @@ body #footer {
 
 /* line 10, ../sass/_menu.scss */
 #main-menu ul.menu > li > a {
-  text-shadow: none; }
-  /* line 13, ../sass/_menu.scss */
+  text-shadow: none;
+  padding: 18px 20px 18px; }
+  /* line 14, ../sass/_menu.scss */
   #main-menu ul.menu > li > a:hover, #main-menu ul.menu > li > a.active {
     color: white; }
-/* line 18, ../sass/_menu.scss */
+/* line 19, ../sass/_menu.scss */
 #main-menu ul.menu > li.active-trail > a {
   color: white; }
 
-/* line 30, ../sass/_menu.scss */
+/* line 31, ../sass/_menu.scss */
 .navbar .navbar-inner {
-  -webkit-border-radius: 0 0 4px 4px;
-  -moz-border-radius: 0 0 4px 4px;
-  border-radius: 0 0 4px 4px; }
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0; }
+  /* line 33, ../sass/_menu.scss */
+  .navbar .navbar-inner .brand {
+    padding-top: 18px;
+    padding-bottom: 18px; }
+  /* line 37, ../sass/_menu.scss */
+  .navbar .navbar-inner .btn-navbar {
+    margin-top: 14px !important; }
 
-/* line 40, ../sass/_menu.scss */
+/* line 48, ../sass/_menu.scss */
 #footer .container .footer-links h4 {
   color: #666666;
   text-transform: uppercase;
@@ -14604,18 +14613,18 @@ body #footer {
   line-height: 21px;
   margin-bottom: 2px;
   text-align: center; }
-/* line 50, ../sass/_menu.scss */
+/* line 58, ../sass/_menu.scss */
 #footer .container .footer-links h3 {
   color: #BBBBBB;
   font-size: 18px;
   line-height: 21px;
   margin-top: 0;
   text-align: center; }
-  /* line 56, ../sass/_menu.scss */
+  /* line 64, ../sass/_menu.scss */
   #footer .container .footer-links h3 a {
     text-decoration: none;
     color: white; }
-    /* line 59, ../sass/_menu.scss */
+    /* line 67, ../sass/_menu.scss */
     #footer .container .footer-links h3 a i {
       display: block;
       font-size: 3.0em;
@@ -14624,9 +14633,13 @@ body #footer {
       margin: 7px auto;
       text-align: center;
       width: auto; }
-    /* line 68, ../sass/_menu.scss */
+    /* line 76, ../sass/_menu.scss */
     #footer .container .footer-links h3 a:hover {
       color: #BBBBBB; }
+
+/* line 7, ../sass/_form.scss */
+.navbar .search-form {
+  padding: 10px 0; }
 
 /* line 8, ../sass/_node.scss */
 .node .field-name-title {
