--- a/assets/sass/partials/_page.scss
+++ b/assets/sass/partials/_page.scss
@@ -1,5 +1,8 @@
-// Maintenance
-// CSS for maintenance page
+// Page
+// Styles for individual pages
+// --------------------------------------------------
+
+// Maintenance Page
 // --------------------------------------------------
 .maintenance-page {
   #main-wrapper {
