--- a/assets/sass/partials/_panel.scss
+++ b/assets/sass/partials/_panel.scss
@@ -1,6 +1,5 @@
-//
-// Structure
-// Styles for Tabs, Messages, ..etc
+// Page
+// Styles for panels
 // --------------------------------------------------
 
 // Tagline
