--- a/assets/sass/partials/_structure.scss
+++ b/assets/sass/partials/_structure.scss
@@ -1,3 +1,4 @@
-// Page
-// Styles for panels
+//
+// Structure
+// Styles for Tabs, Messages, ..etc
 // --------------------------------------------------
