--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -5,9 +5,10 @@
 
 // Mixins and Variables
 // --------------------------------------------------
-@import "variable";
-@import "contrib";
-@import "mixin";
+@import "global/variable";
+@import "global/helper";
+@import "global/mixin";
+@import "global/font";
 
 // Radix
 // --------------------------------------------------
@@ -16,19 +17,13 @@
 
 // Theme CSS
 // --------------------------------------------------
-@import "font";
-@import "layout";
-@import "structure";
-@import "menu";
-@import "navbar";
-@import "page";
-@import "panel";
-@import "view";
-@import "form";
-@import "comment";
-@import "node";
-@import "user";
-
-// Other
-// --------------------------------------------------
-@import "maintenance";
+@import "partials/layout";
+@import "partials/structure";
+@import "partials/menu";
+@import "partials/page";
+@import "partials/panel";
+@import "partials/view";
+@import "partials/form";
+@import "partials/comment";
+@import "partials/node";
+@import "partials/user";
